correccion de fallas de flujo